updated the time

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Fortune Teller With A Twist v5.7.341 </title>
+<title>Fortune Teller With A Twist v5.7.343 update </title>
 
 <script>
 
