--- a/allquestions.html
+++ b/allquestions.html
@@ -5,6 +5,7 @@ userName= prompt("Hello, inquisitive traveler. May I ask your name?")
 // this function makes it so when the first P is clicked, a message appears. 
 function alright(){
 
+tempId= document.getElementById("youWant");
 
 tempId.innerHTML="Alright, " + userName + ", I have gathered that you with to have your fortune told? Let us begin your session!";
 }// end function:alright
