updated file names

--- a/formsdemo.html
+++ b/formsdemo.html
@@ -63,6 +63,11 @@ tempId.innerHTML=  secondQuestionResponse + "? alright, the spirits require anot
 
  <div id= "secondNumberQuestion"> Third message will appear here. </div>  
 
+ <!-- currently only first two questions work-->
+
+ <!-- Next, get rest of questions working-->
+
+<!-- Then, make rest of questions-->
 
 
 <!-- output to a element (p, div) will only work if you have that element  -->
