--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 <title>Fortune Teller With A Twist v5.21.309 update </title>
 
+<link rel="stylesheet" type="text/css" href="a4.css">
+
+
 <script>
 
 
@@ -76,6 +79,54 @@ tempId.innerHTML=  secondQuestionResponse + "? alright, the spirits require anot
 </head>
 
 <body onclick=nextThought()>
+
+	<!-- open of container -->
+<div id="container"> 
+
+    <!-- this is a nested div to hold the tiny menus -->
+	<div id="headermenu"> 
+		
+		<img src="https://s1.postimg.org/24ssd9y7tb/cooltext262565515583586.png" align="center">
+
+	<a href="index.html"> <div class="button"> Home &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div> </a>
+
+		<!-- end grumpycat button -->
+
+	<a href="neoncat.html"> <div class="buttonright"> Neon Cat </div> </a>
+
+		<!-- end neoncat button -->
+
+		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> <div class="button"> Sugar Daddy</div> </a>
+		<!-- end sugardaddy button -->
+
+	<a href="milk.html"> <div class="button"> Need Milk </div> </a>
+
+		<!-- end milk button -->
+			<a href="http://knowyourmeme.com/memes/trollface-coolface-problem"> <div class="button"> Troll Face </div> </a>
+
+		<!-- end trollface button -->
+
+			<a href="game.html"> <div class="button"> Scratch Game </div> </a>
+
+		<!-- end arthur button -->
+
+			<a href="http://knowyourmeme.com/memes/spoopy"> <div class="button"> Spoopy SpoopS </div> </a> 
+
+		<!-- end pill button -->
+
+		 <a href="http://knowyourmeme.com/memes/crying-michael-jordan"> <div class="buttonright"> Crying Jordan </div> </a> 
+
+		<!-- end cryin button -->
+
+
+		<a href="http://knowyourmeme.com/memes/evil-kermit"> <div class="buttonright"> Kermit Darkside </div> </a>
+		<!-- end kermit button -->
+
+	 </div>
+	 <!-- end headermenu -->
+	 <div class="textbox" align="center">
+           <img src="https://s33.postimg.org/7ytwnneun/gjhmhm.png" align="center">
+
 
 <p onclick=nextThought> input your username in the following space, then click anywhere to begin. </p>
 
