--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Fortune Teller With A Twist v5.21.309 update </title>
 
-<link rel="stylesheet" type="text/css" href="a4.css">
+<link rel="stylesheet" type="text/css" href="../a4.css">
 
 
 <script>
