--- a/index.html
+++ b/index.html
@@ -64,12 +64,6 @@ tempId.innerHTML=  secondQuestionResponse + "? alright, the spirits require anot
 // please examine the output test file , then merge that code in here...
 
 
-
-// plan: first, set up basic concept with only one option for each sentence portion, using alerts and prompts.
-// step two: set up a way to give each sentence part more than one option, based on numbers picked by the user.
-// step three: convert code to on-page text, rather than alerts and prompts.
-// learn to make input and output show up on page, rather than in alert form.
-
 // fortune structure: ("in" + number + "years, you will be" + success value + career option + "in " + health value + "with" + pets value + "and you shall be " + happiness value)
 
 
@@ -125,7 +119,7 @@ tempId.innerHTML=  secondQuestionResponse + "? alright, the spirits require anot
 	 </div>
 	 <!-- end headermenu -->
 	 <div class="textbox" align="center">
-           <img src="https://s33.postimg.org/7ytwnneun/gjhmhm.png" align="center">
+           <!-- <img src="https://s33.postimg.org/7ytwnneun/gjhmhm.png" align="center"> -->
 
 
 <p onclick=nextThought> input your username in the following space, then click anywhere to begin. </p>
