--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script>
 
 
-/* var listOfQuestions = [
+/* var listOfQuestions = 
 "Hello, inquisitive traveler. May I ask your name?",
 
 
@@ -24,66 +24,6 @@ yearsNumber + "? alright, the spirits require another integer. Between one and t
 
 
 
- 
-// here is the first output function
-
-
-function nextThought(){
-
-var userName=0
-
-userName= nameForm.nameText.value
-//end first question
-
-
-
- tempId= document.getElementById("introduction");
-
-tempId.innerHTML="Alright, " + userName + " , I have gathered that you wish to have your fortune told? Let us begin your session!"; 
-//end first response
-//first response: functional
-
-
-tempId= document.getElementById("firstNumQuestion");
-
-tempId.innerHTML="In order to read the spirits, I will need a integer between one and three. (please input a value such as 1 instead of one in the following space, then click anywhere to continue.)"; 
-
-
-var firstNumResponse=0
-
-firstNumResponse= firstnumForm.firstnumText.value
-//end first num question
-//first num question: functional
-
-
-
-
-
-tempId= document.getElementById("secondNumQuestion");
-
-tempId.innerHTML=" ? Alright, the spirits require another integer. Between 1 and 3."; 
-
-
-var secondNumResponse=0
-
-secondNumResponse= secondNumForm.secondNumText.value
-//end second num question
-//second num question: not functional
-
-console.log
-
-
-
-/*
-
-tempId= document.getElementById("secondNumberQuestion");
-
-tempId.innerHTML=  secondQuestionResponse + "? alright, the spirits require another integer. Between one and three." 
-// end secondtQuestionResponse
-//second question: not functional
-// must get question to show up on page */
-
-} // end function nextThought 
 
 function intro(){
 
@@ -98,22 +38,27 @@ userName= nameForm.nameText.value
 
  tempId= document.getElementById("introduction");
 
-tempId.innerHTML="Alright, " + userName + " , I have gathered that you wish to have your fortune told? Let us begin your session!"; 
+tempId.innerHTML="Alright, " + userName + " , I have gathered that you wish to have your fortune told? Let us begin your session! In order to read the spirits, I will need a integer between one and three. (please input a value such as 1 instead of one in the following space, then click the next button to continue.)"; 
 //end first response
 //first response: functional
 
 }
 
 
-function yearsFunction(){
-tempId= document.getElementById("firstNumQuestion");
 
-tempId.innerHTML="In order to read the spirits, I will need a integer between one and three. (please input a value such as 1 instead of one in the following space, then click the next button to continue.)"; 
+
+
+
+
+function yearsFunction(){
+tempId= document.getElementById("yearsNumQuestion");
+
+// tempId.innerHTML="In order to read the spirits, I will need a integer between one and three. (please input a value such as 1 instead of one in the following space, then click the next button to continue.)"; 
 
 
 var yearsNumber=0
 
-yearsNumber= secondNumForm.secondNumText.value
+yearsNumber= yearsNumForm.yearsNumText.value
 //end second num question
 //second num question: not functional
 
@@ -127,24 +72,15 @@ if(yearsNumber==2){
 }//end if statement
 if(yearsNumber==3){
 	var yearsValue= " seventy three years, "
-} //end if statement
 
-}
+	tempId= document.getElementById("successNumQuestion");
 
-
-
+tempId.innerHTML= "? Alright, the spirits require another integer. Between 1 and 3." ; 
 
 
-function successFunction(){
+var successNumber=0
 
-tempId= document.getElementById("secondNumQuestion");
-
-tempId.innerHTML=   " ? Alright, the spirits require another integer. Between 1 and 3." ; 
-
-
-var yearsNumber=0
-
-yearsNumber= secondNumForm.secondNumText.value
+successNumber= successNumForm.successNumText.value
 
 
 
@@ -164,9 +100,81 @@ if(successNumber==3){
 
 
 
+tempId= document.getElementById("successNumQuestion");
+
+tempId.innerHTML= " ? Alright, the spirits require another integer. Between 1 and 3."; 
+
+} //end if statement
+
 }
 
-function careerFunction(){
+
+
+
+/* function successFunction(){
+
+tempId= document.getElementById("successNumQuestion");
+
+tempId.innerHTML= "? Alright, the spirits require another integer. Between 1 and 3." ; 
+
+
+var successNumber=0
+
+successNumber= successNumForm.successNumText.value
+
+
+
+var successNumber= eval(successNumber);
+
+if(successNumber==1){
+	var successValue="struggling "
+}
+
+if (successNumber==2){
+	var successValue="successful "
+}
+
+if(successNumber==3){
+	var successValue=" failed "
+}
+
+
+
+tempId= document.getElementById("successNumQuestion");
+
+tempId.innerHTML= " ? Alright, the spirits require another integer. Between 1 and 3."; 
+
+
+//find variable
+/* var careerNumber=0
+
+careerNumber= careerNumForm.careerNumText.value
+
+var careerNumber= eval(careerNumber);
+//end variable finding
+
+//start if statment: evaluates responce
+if (careerNumber==1){
+	var careerValue=" student "
+}
+
+if (careerNumber==2) {
+	var careerValue=" brain surgeon "
+}
+
+if (careerNumber==3) { 
+	var careerValue=" chef "
+ }
+
+ if(careerNumber== 4){
+ 	var careerValue=" Walmart employee "
+ }
+//end if statement */
+
+
+// }
+
+/* function careerFunction(){
 
 
 tempId= document.getElementById("secondNumQuestion");
@@ -175,9 +183,9 @@ tempId.innerHTML= " ? Alright, the spirits require another integer. Between 1 an
 
 
 //find variable
-var successNumber=0
+var careerNumber=0
 
-successNumber= secondNumForm.secondNumText.value
+careerNumber= careerNumForm.careerNumText.value
 
 var careerNumber= eval(careerNumber);
 //end variable finding
@@ -200,7 +208,7 @@ if (careerNumber==3) {
  }
 //end if statement
 
-}
+} */
 // dear SAF I am so proud of you, signed mr. Rowe
 // please examine the output test file , then merge that code in here...
 
@@ -277,30 +285,42 @@ if (careerNumber==3) {
 
 
 
+
+
 <div id="introduction"> first message will appear here once you click the button. </div>
 
 
 
-<div id= "firstNumQuestion">  second message will appear here once you click the button. </div>
 
-<form name="firstNumForm" >
 
-		<input name="firstNumText" type="text" >
+
+
+
+<form name="yearsNumForm" >
+
+		<input name="yearsNumText" type="text" >
 	
 </form> 
+
+
+
+
 
 <button onclick= "yearsFunction"> click here to continue </button>
 
 
-<div id= "secondNumQuestion">  third message will appear here once you click the button. </div>
 
-<form name="secondNumForm" >
 
-		<input name="secondNumText" type="text" >
+
+<div id= "successNumQuestion">  third message will appear here once you click the button. </div>
+
+<form name="successNumForm" >
+
+		<input name="successNumText" type="text" >
 	
 </form> 
 
-<button onclick=successQuestion()>
+<button onclick=successFunction()>
 
 click to continue
 
