many files updated
from computer 10 on june 8th. fixed last errors.

--- a/allquestions.html
+++ b/allquestions.html
@@ -1,14 +1,11 @@
 <script type="text/javascript">
 
-userName= prompt("Hello, inquisitive traveler. May I ask your name?")
 
 // this function makes it so when the first P is clicked, a message appears. 
-function alright(){
 
-tempId= document.getElementById("youWant");
+userName= prompt("Hello, inquisitive traveler. May I ask your name?")
 
-tempId.innerHTML="Alright, " + userName + ", I have gathered that you with to have your fortune told? Let us begin your session!";
-}// end function:alright
+alert("Alright, " + userName + ", I have gathered that you with to have your fortune told? Let us begin your session!");
 
 var yearsNumber= prompt("In order to read the spirits, I will need a integer between one and three. (please input a value such as 1 instead of one)")
 
