--- a/index.html
+++ b/index.html
@@ -96,46 +96,21 @@ tempId.innerHTML=  "? Alright, the spirits require another integer. Between 1 an
 	<!-- open of container -->
 <div id="container"> 
 
+
+
     <!-- this is a nested div to hold the tiny menus -->
 	<div id="headermenu"> 
-		
-		<!-- <img src="https://s1.postimg.org/24ssd9y7tb/cooltext262565515583586.png" align="center"> -->
-
-	<a href="index.html"> <div class="button"> Home &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div> </a>
-
-		<!-- end grumpycat button -->
-
-	<a href="neoncat.html"> <div class="buttonright"> Neon Cat </div> </a>
-
-		<!-- end neoncat button -->
-
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> <div class="button"> Sugar Daddy</div> </a>
-		<!-- end sugardaddy button -->
-
-	<a href="milk.html"> <div class="button"> Need Milk </div> </a>
-
-		<!-- end milk button -->
-			<a href="http://knowyourmeme.com/memes/trollface-coolface-problem"> <div class="button"> Troll Face </div> </a>
-
-		<!-- end trollface button -->
-
-			<a href="game.html"> <div class="button"> Scratch Game </div> </a>
-
-		<!-- end arthur button -->
-
-			<a href="finalproject/index.html"> <div class="button"> Javascript Fortune </div> </a> 
-		<!-- end pill button -->
-
-		 <a href="http://knowyourmeme.com/memes/crying-michael-jordan"> <div class="buttonright"> Crying Jordan </div> </a> 
-
-		<!-- end cryin button -->
+		<a href="index.html"> <div class="button"> Home </div> </a>
+		<a href="finalproject/index.html"> <div class="button"> Javascript Fortune </div> </a> 
+		<a href="neoncat.html"> <div class="button"> Neon Cat </div> </a>
+		<a href="milk.html"> <div class="button"> Need Milk </div> </a>
+		<a href="game.html"> <div class="button"> Scratch Game </div> </a>
+	</div>
+	<!-- end headermenu -->
 
 
-		<a href="http://knowyourmeme.com/memes/evil-kermit"> <div class="buttonright"> Kermit Darkside </div> </a>
-		<!-- end kermit button -->
+    
 
-	 </div>
-	 <!-- end headermenu -->
 	 <div class="textbox" align="center">
            <!-- <img src="https://s33.postimg.org/7ytwnneun/gjhmhm.png" align="center"> -->
 
