--- a/index.html
+++ b/index.html
@@ -97,14 +97,13 @@ tempId.innerHTML=  "? Alright, the spirits require another integer. Between 1 an
 <div id="container"> 
 
 
-
     <!-- this is a nested div to hold the tiny menus -->
 	<div id="headermenu"> 
-		<a href="index.html"> <div class="button"> Home </div> </a>
-		<a href="finalproject/index.html"> <div class="button"> Javascript Fortune </div> </a> 
-		<a href="neoncat.html"> <div class="button"> Neon Cat </div> </a>
-		<a href="milk.html"> <div class="button"> Need Milk </div> </a>
-		<a href="game.html"> <div class="button"> Scratch Game </div> </a>
+		<a href="../index.html"> <div class="button"> Home </div> </a>
+		<a href="index.html"> <div class="button"> Javascript Fortune </div> </a> 
+		<a href="../neoncat.html"> <div class="button"> Neon Cat </div> </a>
+		<a href="../milk.html"> <div class="button"> Need Milk </div> </a>
+		<a href="../game.html"> <div class="button"> Scratch Game </div> </a>
 	</div>
 	<!-- end headermenu -->
 
